--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,8 @@ lifecycleRuntimeCompose = "2.8.0"
 retrofit = "2.9.0"
 gson = "2.10.1"
 okhttp = "4.11.0"
+mockito = "5.2.0"
+kotlinxCoroutinesTest = "1.7.3"
 
 
 [libraries]
@@ -36,7 +38,9 @@ retrofit-core = { group = "com.squareup.retrofit2", name = "retrofit", version.r
 retrofit-converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit" }
 gson-core = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
 okhttp-loggingInterceptor = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttp" }
-
+kotlinx-coroutines-test = {group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "kotlinxCoroutinesTest"}
+mockito-kotlin = {group = "org.mockito.kotlin", name = "mockito-kotlin", version.ref = "mockito"}
+mockito-inline = {group = "org.mockito", name = "mockito-inline", version.ref = "mockito"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
